# LEGOLAS

./: .gitignore  QUICK_REFERENCE.md  README.md  TEST_ADAPTIVE_IG.md  XAI_log_valvole_cardiache.txt  domanda.txt  pyproject.toml  restructure_project.sh  test_adaptive_ig.sh  xai_log.txt  xai_run_log.txt
docs/: ADAPTIVE_IG_REFACTORING.md  BUGFIX_MODEL_CONFIG.md  CHANGELOG_2025_10_22.md  EVALUATION_LOGGING.md  EXPLAINABILITY_BUGFIX.md  EXPLAINABILITY_CLINICAL_ACTIONS.md  EXPLAINABILITY_GUIDE.md  FLOW_DIAGRAM.md  IG_STEPS_OPTIMIZATION.md  INDEX.md  INTEGRATION_COMPLETE.txt  INTEGRATION_COMPLETE_SUMMARY.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  MODEL_CONFIG_GUIDE.md  MODEL_CONFIG_INTEGRATION_COMPLETE.md  NEXT_STEPS.md  PATH_CENTRALIZATION_COMPLETE.md  PIANO_LAVORI_FUNZIONALITÀ_TRAINING.md  PIANO_LAVORI_UPDATE_10OCT2025.md  PROJECT_STRUCTURE.md  QUICK_START.txt  README_INTEGRATION.md  REFACTORING_NUM_CLASSES.md  TRAINING_COMPLETE.txt  TRAINING_EVALUATION_GUIDE.md  TRAIN_LLM_INTEGRATION.md  VISUALIZATION_NORMALIZATION.md  XAI.md  ig_quadrature_bug.md  story_generator_spiegazione.md
docs/flowcharts/: EXTRACT_EXPLAINABILITY_FLOWCHART.md  README.md  TRAIN_LLM_FLOWCHART.md
scripts/: analyze_translated_dataset.py  diagnose_ig_numerical.py  from_pickle_print_story_by_id.py  generate_stories.py  launch_run_train_eval  list_models.py  plot_comparison.py  plot_training_losses.py  quick_ig_test.py  read_pickle.py  run_all_bert_models.sh  run_explainability.sh  run_train_eval.sh  run_xes_pipeline.sh  test_integration.py  train_xes_model.py  validate_ig_steps.py
tests/: test_ensemble.py  test_num_classes_refactor.py  test_training_phase1.py  test_training_phase2.py  test_training_phase3.py  test_training_phase4_0.py  test_training_phase4_3_1.py  test_training_phase4_3_2.py  test_training_phase4_3_3.py  test_training_phase4_3_4.py  test_training_phase4_3_7.py
utils/: __init__.py  config.py  ml_utils.py  types.py
xai_to_import/: README.md  __init__.py  action_aggregator.py  extract_explainability.py  ig_completeness.py  integrated_gradients.py  replot_explainability.py  visualization.py
(+39 files in other folders)
